logs/Slang/generated/yosys/asicworld_code_tidbits_fsm_using_single_always.sv.log
name: asicworld_code_tidbits_fsm_using_single_always
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v:33:12: error: language feature not yet supported
  state <= #1 IDLE;
           ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v:39:26: error: language feature not yet supported
                state <= #1 GNT0;
                         ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v:43:26: error: language feature not yet supported
                state <= #1 GNT1;
                         ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v:45:26: error: language feature not yet supported
                state <= #1 IDLE;
                         ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v:48:26: error: language feature not yet supported
                state <= #1 GNT0;
                         ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v:51:26: error: language feature not yet supported
                state <= #1 IDLE;
                         ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v:54:26: error: language feature not yet supported
                state <= #1 GNT1;
                         ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v:57:26: error: language feature not yet supported
                state <= #1 IDLE;
                         ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_tidbits_fsm_using_single_always.v:59:23: error: language feature not yet supported
   default : state <= #1 IDLE;
                      ^~~~~~~
